--- a/templates/upload.html
+++ b/templates/upload.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="navigation">
-            <a href="/dashboard" class="back-link">← Back to Dashboard</a>
+            <a href="/" class="back-link">← Back to Dashboard</a>
         </div>
 
         <div id="messageContainer" class="message"></div>
