--- a/templates/upload.html
+++ b/templates/upload.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header">
             <h1>Upload CSV File</h1>
-            <p>Upload your grade data and organize it with tags</p>
+            <p>Upload your grade data and organize it with tags ONLY IF YOU WANT TO</p>
         </div>
 
         <div class="navigation">
